--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
 *.pyc
 *.un~
 *.swp
+*.egg-info
 /build
-
-traitsml.egg-info/top_level.txt
-
-traitsml.egg-info/requires.txt
-
-traitsml.egg-info/dependency_links.txt
-
-traitsml.egg-info/SOURCES.txt
-
-traitsml.egg-info/PKG-INFO
-
-dist/traitsml-0.1a-py2.7.egg
+/dist
