use wildcards instead of individual file listing

--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,3 @@
 *.pyc
-docs/build/.DS_Store
-docs/build/doctrees/architecture.doctree
-docs/build/doctrees/developers_corner.doctree
-docs/build/doctrees/enaml.doctree
-docs/build/doctrees/enaml.item_models.doctree
-docs/build/doctrees/enaml.parsing.doctree
-docs/build/doctrees/enaml.styling.doctree
-docs/build/doctrees/enaml.tests.doctree
-docs/build/doctrees/enaml.util.doctree
-docs/build/doctrees/enaml.widgets.doctree
-docs/build/doctrees/enaml_file.doctree
-docs/build/doctrees/environment.pickle
-docs/build/doctrees/example.doctree
-docs/build/doctrees/index.doctree
-docs/build/doctrees/modules.doctree
-docs/build/doctrees/overview.doctree
-docs/build/doctrees/tests/components.doctree
-docs/build/doctrees/tests/core.doctree
-docs/build/doctrees/tests/doc.doctree
-docs/build/doctrees/tests/parsing.doctree
-docs/build/doctrees/tests/util.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.calendar.TestCalendar.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.check_box.TestCheckBox.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.combo_box.TestComboBox.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.date_edit.TestDateEdit.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.datetime_edit.TestDatetimeEdit.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.field.TestField.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.html.TestHtml.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.label.TestLabel.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.push_button.TestPushButton.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.radio_button.TestRadioButton.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.slider.TestSlider.doctree
-docs/build/doctrees/tests/widgets/enaml.tests.widgets.spin_box.TestSpinBox.doctree
-docs/build/doctrees/widgets/enaml.widgets.bounded_date.BoundedDate.doctree
-docs/build/doctrees/widgets/enaml.widgets.calendar.Calendar.doctree
-docs/build/doctrees/widgets/enaml.widgets.check_box.CheckBox.doctree
-docs/build/doctrees/widgets/enaml.widgets.combo_box.ComboBox.doctree
-docs/build/doctrees/widgets/enaml.widgets.component.Component.doctree
-docs/build/doctrees/widgets/enaml.widgets.container.Container.doctree
-docs/build/doctrees/widgets/enaml.widgets.control.Control.doctree
-docs/build/doctrees/widgets/enaml.widgets.date_edit.DateEdit.doctree
-docs/build/doctrees/widgets/enaml.widgets.datetime_edit.DatetimeEdit.doctree
-docs/build/doctrees/widgets/enaml.widgets.dialog.Dialog.doctree
-docs/build/doctrees/widgets/enaml.widgets.enable_canvas.EnableCanvas.doctree
-docs/build/doctrees/widgets/enaml.widgets.field.Field.doctree
-docs/build/doctrees/widgets/enaml.widgets.form.Form.doctree
-docs/build/doctrees/widgets/enaml.widgets.group_box.GroupBox.doctree
-docs/build/doctrees/widgets/enaml.widgets.html.Html.doctree
-docs/build/doctrees/widgets/enaml.widgets.image.Image.doctree
-docs/build/doctrees/widgets/enaml.widgets.label.Label.doctree
-docs/build/doctrees/widgets/enaml.widgets.progress_bar.ProgressBar.doctree
-docs/build/doctrees/widgets/enaml.widgets.push_button.PushButton.doctree
-docs/build/doctrees/widgets/enaml.widgets.radio_button.RadioButton.doctree
-docs/build/doctrees/widgets/enaml.widgets.slider.Slider.doctree
-docs/build/doctrees/widgets/enaml.widgets.spin_box.SpinBox.doctree
-docs/build/doctrees/widgets/enaml.widgets.table_view.TableView.doctree
-docs/build/doctrees/widgets/enaml.widgets.toggle_control.ToggleControl.doctree
-docs/build/doctrees/widgets/enaml.widgets.traitsui_item.TraitsUIItem.doctree
-docs/build/doctrees/widgets/enaml.widgets.window.Window.doctree
-docs/source/sphinxext/refactor_doc.pyc
-docs/source/traits_class.pyc
-enaml.egg-info/PKG-INFO
-enaml.egg-info/SOURCES.txt
-enaml.egg-info/dependency_links.txt
-enaml.egg-info/entry_points.txt
-enaml.egg-info/requires.txt
-enaml.egg-info/top_level.txt
+docs/build/*
+enaml.egg-info/*
