"more widgets" tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 docs/source/.DS_Store
 docs/source/instructional/.DS_Store
 docs/source/instructional/images/.DS_Store
+docs/source/developer_guide/.DS_Store
