update gitignore to ignore MacOS hidden DS Store files

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,8 @@
 *.swp
 *.egg-info
 *.so
+*.DS_Store
 /build
 /dist
 /docs/build
-docs/source/.DS_Store
-docs/source/instructional/.DS_Store
-docs/source/instructional/images/.DS_Store
-docs/source/developer_guide/.DS_Store
+
